# db-alchemy-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt
db/core/: config.py  database.py  exc.py
db/models/: __init__.py  base_model.py
db/repositories/: __init__.py  abstract_repo.py
dbalchemycore/: __init__.py
dbalchemycore/core/: __init__.py  config.py  database.py  exc.py
dbalchemycore/models/: __init__.py  base_model.py
dbalchemycore/repositories/: __init__.py  abstract_repo.py
tests/: conftest.py  docker-compose.yml  test_database.py  test_repository.py
tests/test_models/: user.py
tests/test_repositories/: user_repo.py
tests/test_schemas/: user.py
