[tool.black]
line-length = 79
exclude = "\\.venv|\\.git|__pycache__|__init__\\.py"


[tool.isort]
line_length = 79
include_trailing_comma = true
lines_after_imports = 2
skip = ["__init__.py"]
profile = "black"

[tool.flake8]
exclude = ".git,__pycache__,.venv,*/__init__.py"
extend-ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 79

[project]
name = "dbalchemycore"
version = "0.1.3"
description = "Asynchronous database library using SQLAlchemy Core with CRUD operations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "tktturik", email = "tktturik@gmail.com"}
]
keywords = ["database", "async", "sqlalchemy", "postgresql", "crud", "alembic", "pydantic", "fastapi"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "SQLAlchemy==2.0.41",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "annotated-types==0.7.0",
    "asyncpg==0.30.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "alembic==1.16.4",
    "pydantic-settings==2.5.2"
]

[project.urls]
Documentation = "https://github.com/tktturik/db-alchemy-core"
